infra/ingresses/bookorbit-ingress-amer-dev.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: bookorbit-ingress-amer-dev
  namespace: default
spec:
  entryPoints:
    - websecure
  tls:
    secretName: media-amer-dev-tls
  routes:
    - match: Host(`bookorbit.media.amer.dev`)
      kind: Rule
      services:
        - name: bookorbit-external
          port: 3005
