infra/ingresses/comfyui-ingress-amer-dev.yaml
---
# ComfyUI running on Murderbot (external to k3s cluster)
apiVersion: v1
kind: Service
metadata:
  name: comfyui-external
  namespace: default
spec:
  ports:
    - port: 8188
      targetPort: 8188
      protocol: TCP
---
apiVersion: discovery.k8s.io/v1
kind: EndpointSlice
metadata:
  name: comfyui-external-1
  namespace: default
  labels:
    kubernetes.io/service-name: comfyui-external
addressType: IPv4
endpoints:
  - addresses:
      - 10.100.20.19
    conditions:
      ready: true
ports:
  - name: ""
    port: 8188
    protocol: TCP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: comfyui-ingress-amer-dev
  namespace: default
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
    cert-manager.io/cluster-issuer: letsencrypt-prod
    external-dns.alpha.kubernetes.io/hostname: comfy.amer.dev
    external-dns.alpha.kubernetes.io/ttl: "300"
spec:
  ingressClassName: infra-traefik
  tls:
    - hosts:
        - comfy.amer.dev
      secretName: comfy-amer-dev-tls
  rules:
    - host: comfy.amer.dev
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: comfyui-external
                port:
                  number: 8188
