infra/ingresses/grafana-mini-ingress-amer-dev.yaml
---
# Service + Endpoints for Grafana running on Mac Mini (external to k3s)
apiVersion: v1
kind: Service
metadata:
  name: grafana-mini-external
  namespace: default
spec:
  ports:
    - port: 3000
      targetPort: 3000
      protocol: TCP
---
apiVersion: discovery.k8s.io/v1
kind: EndpointSlice
metadata:
  name: grafana-mini-external-1
  namespace: default
  labels:
    kubernetes.io/service-name: grafana-mini-external
addressType: IPv4
endpoints:
  - addresses:
      - 10.100.20.18  # Mac Mini LAN IP
    conditions:
        ready: true
ports:
  - name: ""
    port: 3000
    protocol: TCP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grafana-mini-ingress-amer-dev
  namespace: default
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
    cert-manager.io/cluster-issuer: letsencrypt-prod
    external-dns.alpha.kubernetes.io/hostname: grafana.amer.dev
    external-dns.alpha.kubernetes.io/ttl: "300"
spec:
  ingressClassName: infra-traefik
  tls:
    - hosts:
        - grafana.amer.dev
      secretName: grafana-amer-dev-tls
  rules:
    - host: grafana.amer.dev
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: grafana-mini-external
                port:
                  number: 3000
