infra/ingresses/komodo-ingress-amer-dev.yaml
---
# Service + Endpoints for Komodo running on Mac Mini (external to k3s)
apiVersion: v1
kind: Service
metadata:
  name: komodo-external
  namespace: default
spec:
  ports:
    - port: 9120
      targetPort: 9120
      protocol: TCP
---
apiVersion: discovery.k8s.io/v1
kind: EndpointSlice
metadata:
  name: komodo-external-1
  namespace: default
  labels:
    kubernetes.io/service-name: komodo-external
addressType: IPv4
endpoints:
  - addresses:
      - 10.100.20.18  # Mac Mini LAN IP
    conditions:
        ready: true
ports:
  - name: ""
    port: 9120
    protocol: TCP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: komodo-ingress-amer-dev
  namespace: default
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
    traefik.ingress.kubernetes.io/router.tls.options: default-komodo-no-h2@kubernetescrd
    cert-manager.io/cluster-issuer: letsencrypt-prod
    external-dns.alpha.kubernetes.io/hostname: komodo.amer.dev
    external-dns.alpha.kubernetes.io/ttl: "300"
spec:
  ingressClassName: infra-traefik
  tls:
    - hosts:
        - komodo.amer.dev
      secretName: komodo-amer-dev-tls
  rules:
    - host: komodo.amer.dev
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: komodo-external
                port:
                  number: 9120
